--- a/Teaching_management-master/templates/administrator/index.html
+++ b/Teaching_management-master/templates/administrator/index.html
@@ -422,7 +422,7 @@
                                         <td class="two wide">{{ j.4 }}</td>
                                         <td>{{ j.5 }}楼</td>
                                         <td class="collapsing">
-                                            <div class="ui right floated tiny button" >删除</div>
+                                            <div class="ui right floated tiny button" onclick="deleteliuyan({{ j.6 }})"  >删除</div>
                                         </td>
                                     </tr>
                                     </tbody>
